--- a/ProjetIntegre/nbproject/private/private.properties
+++ b/ProjetIntegre/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\rassi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\hamza\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
