--- a/ProjetIntegre/nbproject/project.properties
+++ b/ProjetIntegre/nbproject/project.properties
@@ -29,17 +29,65 @@ dist.jar=${dist.dir}/JavaApplication1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.itextpdf-5.4.3.jar=lib/itextpdf-5.4.3.jar
-file.reference.javax.mail.jar=lib/javax.mail.jar
-file.reference.mysql-connector-java-5.1.15-bin.jar=lib/mysql-connector-java-5.1.15-bin.jar
-file.reference.NotificationAPI.jar=lib/NotificationAPI.jar
+file.reference.activation-1.1.jar=lib\\activation-1.1.jar
+file.reference.animal-sniffer-annotations-1.17.jar=lib\\animal-sniffer-annotations-1.17.jar
+file.reference.checker-compat-qual-2.5.5.jar=lib\\checker-compat-qual-2.5.5.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.error_prone_annotations-2.3.2.jar=lib\\error_prone_annotations-2.3.2.jar
+file.reference.failureaccess-1.0.1.jar=lib\\failureaccess-1.0.1.jar
+file.reference.guava-28.0-android.jar=lib\\guava-28.0-android.jar
+file.reference.httpclient-4.5.6.jar=lib\\httpclient-4.5.6.jar
+file.reference.httpcore-4.4.10.jar=lib\\httpcore-4.4.10.jar
+file.reference.itextpdf-5.4.3.jar=lib\\itextpdf-5.4.3.jar
+file.reference.j2objc-annotations-1.3.jar=lib\\j2objc-annotations-1.3.jar
+file.reference.jackson-annotations-2.10.2.jar=lib\\jackson-annotations-2.10.2.jar
+file.reference.jackson-core-2.10.2.jar=lib\\jackson-core-2.10.2.jar
+file.reference.jackson-databind-2.10.2.jar=lib\\jackson-databind-2.10.2.jar
+file.reference.javax.mail.jar=lib\\javax.mail.jar
+file.reference.jaxb-api-2.2.jar=lib\\jaxb-api-2.2.jar
+file.reference.jjwt-api-0.10.7.jar=lib\\jjwt-api-0.10.7.jar
+file.reference.jjwt-impl-0.10.7.jar=lib\\jjwt-impl-0.10.7.jar
+file.reference.jjwt-jackson-0.10.7.jar=lib\\jjwt-jackson-0.10.7.jar
+file.reference.joda-time-2.5.jar=lib\\joda-time-2.5.jar
+file.reference.jsr305-3.0.2.jar=lib\\jsr305-3.0.2.jar
+file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=lib\\listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
+file.reference.mysql-connector-java-5.1.15-bin.jar=lib\\mysql-connector-java-5.1.15-bin.jar
+file.reference.NotificationAPI.jar=lib\\NotificationAPI.jar
+file.reference.stax-api-1.0-2.jar=lib\\stax-api-1.0-2.jar
+file.reference.twilio-7.47.5.jar=lib\\twilio-7.47.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector-java-5.1.15-bin.jar}:\
     ${file.reference.NotificationAPI.jar}:\
-    ${file.reference.itextpdf-5.4.3.jar}
+    ${file.reference.itextpdf-5.4.3.jar}:\
+    ${file.reference.twilio-7.47.5.jar}:\
+    ${file.reference.NotificationAPI.jar}:\
+    ${file.reference.activation-1.1.jar}:\
+    ${file.reference.animal-sniffer-annotations-1.17.jar}:\
+    ${file.reference.checker-compat-qual-2.5.5.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.error_prone_annotations-2.3.2.jar}:\
+    ${file.reference.failureaccess-1.0.1.jar}:\
+    ${file.reference.guava-28.0-android.jar}:\
+    ${file.reference.httpclient-4.5.6.jar}:\
+    ${file.reference.httpcore-4.4.10.jar}:\
+    ${file.reference.itextpdf-5.4.3.jar}:\
+    ${file.reference.j2objc-annotations-1.3.jar}:\
+    ${file.reference.jackson-annotations-2.10.2.jar}:\
+    ${file.reference.jackson-core-2.10.2.jar}:\
+    ${file.reference.jackson-databind-2.10.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jaxb-api-2.2.jar}:\
+    ${file.reference.jjwt-api-0.10.7.jar}:\
+    ${file.reference.jjwt-impl-0.10.7.jar}:\
+    ${file.reference.jjwt-jackson-0.10.7.jar}:\
+    ${file.reference.joda-time-2.5.jar}:\
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
+    ${file.reference.mysql-connector-java-5.1.15-bin.jar}:\
+    ${file.reference.stax-api-1.0-2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +112,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapplication1.JavaApplication1
+main.class=LoginForm.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
